<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/settingsItem"
        android:title="@string/settings" />

    <item
        android:id="@+id/importItem"
        android:title="@string/import_item" />
    <item
        android:id="@+id/sortItem"
        android:title="@string/sorting">
        <menu>
            <item
                android:id="@+id/sortReverse"
                android:checkable="true"
                android:title="@string/reverse_order" />
            <item
                android:id="@+id/sortAlpha"
                android:checkable="true"
                android:title="@string/alphabetically" />
            <item
                android:id="@+id/sortCreation"
                android:checkable="true"
                android:title="@string/creation_date" />
            <item
                android:id="@+id/sortRecent"
                android:checkable="true"
                android:title="@string/recently_edited" />
        </menu>
    </item>

    <item
        android:id="@+id/selectItem"
        android:title="@string/selection">
        <menu>
            <item
                android:id="@+id/selectDelete"
                android:title="@string/delete_selection" />
            <item
                android:id="@+id/selectShare"
                android:title="@string/share_selection" />
            <item
                android:id="@+id/selectDuplicate"
                android:title="@string/duplicate_selection" />
            <item
                android:id="@+id/selectClear"
                android:title="@string/clear_selection" />
            <item
                android:id="@+id/selectAll"
                android:title="@string/select_all" />
        </menu>
    </item>


</menu>