<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.preference.PreferenceCategory android:title="@string/theming">
        <ListPreference
            android:dialogTitle="@string/colors_dialog_title"
            android:entries="@array/theming_colors"
            android:entryValues="@array/theming_colors_values"
            android:key="accentColor"
            android:summary="@string/accent_color_desc"
            android:title="@string/accent_color" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="backgroundColor"
            android:title="@string/dark_theme" />
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory android:title="@string/about_title">
        <Preference
            android:key="about"
            android:summary="@string/about_desc" />
        <Preference
            android:key="youtube"
            android:summary="@string/youtube_desc"
            android:title="@string/youtube_channel_title">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://www.youtube.com/channel/UCcf2Mr1qNoX51XXDUd3Rquw" />
        </Preference>
        <Preference
            android:key="github"
            android:summary="@string/github_desc"
            android:title="@string/github_repo_title">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/ByteSeb/Grafobook" />
        </Preference>
        <Preference
            android:key="version"
            android:title="@string/version" />
    </androidx.preference.PreferenceCategory>
</androidx.preference.PreferenceScreen>