<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:id="@+id/emptyLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/recycler"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolsLayout">

        <ImageView
            android:id="@+id/emptyImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/empty_icon"
            app:srcCompat="@drawable/ic_round_inbox_120"
            app:tint="?attr/colorAccent" />

        <TextView
            android:id="@+id/emptyTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/empty_place"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/emptyMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/try_creating_note"
            android:textAlignment="center"
            android:textSize="20sp" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/searchDock"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolsLayout" />

    <LinearLayout
        android:id="@+id/toolsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/tools_background"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/sortButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/sort_button_desc"
            app:srcCompat="@drawable/ic_round_sort_32"
            app:tint="?attr/colorAccent" />

        <TextView
            android:id="@+id/selectingText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/selectButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@android:color/transparent"
            android:contentDescription="@string/select_button_desc"
            app:srcCompat="@drawable/ic_round_check_32"
            app:tint="?attr/colorAccent" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/searchDock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/search_dock"
        android:elevation="30dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.chip.ChipGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/filterRecycler"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
            </LinearLayout>

        </com.google.android.material.chip.ChipGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/searchCard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                app:cardCornerRadius="15dp"
                app:cardElevation="3dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/optionsButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="10dp"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/options_button_desc"
                        app:srcCompat="@drawable/ic_round_menu_32"
                        app:tint="?attr/colorAccent" />

                    <EditText
                        android:id="@+id/editSearch"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:ems="10"
                        android:fontFamily="@font/poppins_medium"
                        android:hint="@string/search"
                        android:imeOptions="flagNoExtractUi"
                        android:inputType="textPersonName"
                        android:maxLines="1"
                        android:textSize="20sp" />

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/newFAB"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="5dp"
                        android:contentDescription="@string/new_note"
                        app:elevation="5dp"
                        app:fabSize="mini"
                        app:srcCompat="@drawable/ic_round_add_24"
                        app:tint="?attr/colorSurface" />
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>