<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/importBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:background="@android:color/transparent"
                    app:srcCompat="@drawable/ic_round_arrow_back_32"
                    app:tint="?attr/colorAccent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/import_notes"
                    android:textSize="20sp" />
            </LinearLayout>

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/importRecycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:paddingBottom="10dp" />

            <TextView
                android:id="@+id/importDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:text="@string/import_desc"
                android:textAlignment="center"
                android:textSize="16sp" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/browseButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/browse"
                app:cornerRadius="10dp"
                app:icon="@drawable/ic_round_folder_24"
                app:iconGravity="textStart" />

            <Button
                android:id="@+id/importButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:enabled="false"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/import_amount"
                app:cornerRadius="10dp"
                app:icon="@drawable/ic_round_file_download_24"
                app:iconGravity="textStart" />

        </LinearLayout>
    </LinearLayout>

</FrameLayout>